	  operation.  Affected files are lib/silcclient/silcclient.h
	  and client_channel.c.

	* Fixed wrong arg type for user limit in CMODE command reply.
	  Affected file silcd/command.c.

	* The user limit is now taken and saved to SilcClientEntry in
	  JOIN and CMODE command replies and in CMODE_CHANGE notify.
	  Affected files lib/silcclient/silcclient.h, command_reply.c
	  and client_notify.c.

Fri Feb 27 11:25:26 CET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the JOIN command calling when called with both
	 -auth and -founder.  Affected file is lib/silcclien/command.c.

Wed Feb 25 23:12:11 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Check watcher list for resumed clients as well.  Affected
	  file is silcd/packet_receive.c.

Tue Feb 24 16:49:10 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Implemented the user limit to the CMODE_CHANGE notify,
	  CMODE command reply and JOIN command reply in server.
	  Affected files are silcd/server.c, command.c, command_reply.c,
	  packet_send.c and packet_receive.c.

Mon Feb 23 23:31:15 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Defined SILC_STRFMT_END that must be used now with
	  silc_buffer_strformat, instead of SILC_STR_END.  Fixes
	  crashes on AMD64.  Affected files are lib/silcutil/silcbuffmt.h,
	  lib/silcclient/silcvcard.c, silcd/server_util.c.

	* Fixed the adding of public key to the WATCH list in server.
	  Fixed the WATCH notify sending to client.  Affected files
	  are silcd/packet_send.[ch], command.c, server_util.c.

	* Implemented the watching by public key in the SILC Client
	  Library and SILC Client.  Affected files are
	  lib/silcclient/command.c and client_notify.c.

Mon Feb 23 09:30:30 CET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Added support for public key watching in server.  Affected
	  files are silcd/server.c, server_internal.h, command.c,
	  server_util.c.

Sun Feb 22 19:03:59 EET 2004  Pekka Riikonen <priikone@silcnet.org>
